# Telus-one

./: .env.example  .gitignore  .pre-commit-config.yaml  CAZ_Companion_Tutorial_GPT2_XL.ipynb  GUIDELINES.md  README.md  pyproject.toml
.github/workflows/: code_checks.yml  publish.yml  unit_tests.yml
aieng-llm-interp/: README.md  pyproject.toml
aieng-llm-interp/aieng/llm_interp/: __init__.py  utils.py
aieng-llm-interp/tests/aieng/: __init__.py
aieng-llm-interp/tests/aieng/llm_interp/: __init__.py  test_utils.py
implementations/agentic_vqa_eval/: README.md  analysis.ipynb  pyproject.toml  run_pipeline.ipynb
implementations/bias_fairness_analysis/: README.md  zero_shot_hate_explanations.ipynb
implementations/caz_sentinel/: README.md  pyproject.toml
implementations/caz_sentinel/scripts/: bench.py  build_synthetic_probes.py  run_dev.sh
implementations/caz_sentinel/src/caz_sentinel/: __init__.py  api.py  audit_store.py  chronicle_sink.py  model_loader.py  openai_shapes.py  probe_library.py  scorer.py  streaming.py  types.py
implementations/caz_sentinel/src/caz_sentinel/scripts/: __init__.py  __main__.py  build_synthetic_probes.py
implementations/caz_sentinel/tests/: __init__.py  conftest.py  test_api_audit.py  test_api_chat_pass.py  test_api_chat_suppress.py  test_api_streaming.py  test_audit_store.py  test_chronicle_sink.py  test_openai_shapes.py  test_probe_library.py  test_scorer.py  test_types.py
implementations/caz_sentinel/ui/: demo_app.py
implementations/implementation_d/: 01_intoduction_and_dataset_construction.ipynb  02_inference_runner.ipynb  03_dpo_pair_construction.ipynb  04_dpo_training.ipynb  05_evaluation.ipynb  README.md
implementations/mechanistic_interpretability/: CAZ_Companion_Tutorial.ipynb  CAZ_Companion_Tutorial_GPT2_XL.ipynb  SAE_vs_CAZ_Ablation_Comparison.ipynb  (+2 more)
(+81 files in other folders)
