[project]
name = "caz-sentinel"
version = "0.1.0"
description = "CAZ Sentinel - Runtime guard for open LLMs using Concept Allocation Zones"
authors = [{name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai"}]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "LicenseRef-Vector-Institute-License"
license-files = ["LICENSE.md"]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "pydantic>=2.8",
    "transformers>=4.44",
    "torch>=2.3",
    "accelerate>=0.29.3",
    "safetensors>=0.4",
    "numpy>=1.26",
    "httpx>=0.27",
    "streamlit>=1.37",
    "rosetta-tools",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23",
]

# Default dependency groups to be installed
[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
